Ports plugin to sbt 1.0.x [wip]